# tanoshi-extensions

./: Cargo.toml  Readme.md  rust-toolchain.toml
.github/workflows/: ci.yml
common/guyalib/: Cargo.toml
common/guyalib/src/: lib.rs
common/madara/: Cargo.toml
common/madara/src/: lib.rs
common/mangakakalot/: Cargo.toml
common/mangakakalot/src/: lib.rs
common/nepnep/: Cargo.toml
common/nepnep/src/: dto.rs  lib.rs
common/networking/: Cargo.toml
common/networking/src/: lib.rs  ratelimit.rs
common/wpmangareader/: Cargo.toml
common/wpmangareader/src/: lib.rs
common/wpmangastream/: Cargo.toml
common/wpmangastream/src/: lib.rs
extensions/365manga/: Cargo.toml
extensions/365manga/src/: lib.rs
extensions/dead/asurascans/: Cargo.toml
extensions/dead/firstkissmanhua/: Cargo.toml
extensions/dead/isekaiscanmanga/: Cargo.toml
extensions/dead/leviatanscans/: Cargo.toml
extensions/dead/mangakakalot/: Cargo.toml
extensions/dead/mangakakalot/src/: lib.rs
extensions/dead/mangalife/: Cargo.toml
extensions/dead/mangalife/src/: lib.rs
extensions/dead/manganato/: Cargo.toml
extensions/dead/manganato/src/: lib.rs
extensions/dead/mangasee/: Cargo.toml
extensions/dead/mangatx/: Cargo.toml
extensions/dead/mmscans/: Cargo.toml
extensions/dead/reaperscans/: Cargo.toml
extensions/dead/tritiniascans/: Cargo.toml
extensions/guya/: Cargo.toml
extensions/guya/src/: lib.rs
extensions/mangadex/: Cargo.toml
extensions/mangadex/src/: lib.rs
extensions/mangadex/src/dto/: manga.rs  mod.rs
extensions/manhuafast/: Cargo.toml
extensions/manhuafast/src/: lib.rs
extensions/manhwa18cc/: Cargo.toml
extensions/manhwa18cc/src/: lib.rs
extensions/nhentai/: Cargo.toml
extensions/nhentai/src/: lib.rs
extensions/weebcentral/: Cargo.toml
extensions/weebcentral/src/: lib.rs
