[workspace]
members = ["extensions/*", "common/*"]
exclude = [
    "extensions/asurascans",
    "extensions/reaperscans",
    "extensions/firstkissmanhua",
    "extensions/mmscans",
    "extensions/tritiniascans",
    "extensions/mangatx",
    "extensions/mangasee",
    "extensions/manga4life",
]

[profile.release]
strip = true
opt-level = "z"
lto = true
