[package]
name = "nepnep"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
networking = { path = "../networking" }
tanoshi-lib = { git = "https://github.com/luigi311/tanoshi", tag = "v0.38.0" }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
fancy-regex = "0.16"
scraper = "0.24"
anyhow = "1"
serde_json = "1"
lazy_static = "1"
log = "0.4"
