[package]
name = "networking"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie = "0.18"
cookie_store = { version = "0.22" }
ureq = { version = "3", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
url = "2"
serde_json = "1.0.145"
anyhow = "1.0.100"
urlencoding = "2.1.3"
