[package]
name = "wpmangareader"
version = "0.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
networking = { path = "../networking" }
tanoshi-lib = { git = "https://github.com/luigi311/tanoshi", tag = "v0.38.0" }
chrono = "0.4"
scraper = "0.24"
anyhow = "1"
