[package]
name = "guya"
version = "0.5.0"
edition = "2024"


[lib]
crate-type = ["cdylib"]

[dependencies]
networking = { path = "../../common/networking" }
tanoshi-lib = { git = "https://github.com/luigi311/tanoshi", tag = "v0.38.0" }
guyalib = { path = "../../common/guyalib" }
anyhow = "1"
lazy_static = "1"
bytes = "1"
