[package]
name = "mangadex"
version = "0.5.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
networking = { path = "../../common/networking" }
tanoshi-lib = "0.27.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
fancy-regex = "0.16"
scraper = "0.24"
anyhow = "1"
serde_json = "1"
lazy_static = "1"
serde_qs = "0.15"
phf = { version = "0.13", features = ["macros"] }
log = "0.4"
env_logger = { version = "0.11", default-features = false }
