[package]
name = "manhuafast"
version = "0.5.3"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
networking = { path = "../../common/networking" }
tanoshi-lib = { git = "https://github.com/luigi311/tanoshi", tag = "v0.38.0" }
madara = { path = "../../common/madara" }
anyhow = "1"
lazy_static = "1"
log = "0.4"
env_logger = { version = "0.11", default-features = false }
bytes = "1"
