[package]
name = "manhwa18cc"
version = "0.5.2"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
networking = { path = "../../common/networking" }
tanoshi-lib = { git = "https://github.com/luigi311/tanoshi", tag = "v0.38.0" }
madara = { path = "../../common/madara" }
anyhow = "1"
scraper = "0.24"
lazy_static = "1"
bytes = "1"
