[package]
name = "weebcentral"
version = "0.5.2"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
networking = { path = "../../common/networking" }
tanoshi-lib = { git = "https://github.com/luigi311/tanoshi", tag = "v0.38.0" }
anyhow = "1"
lazy_static = "1"
scraper = "0.24.0"
urlencoding = "2.1.3"
chrono = "0.4"
bytes = "1"
